test-app-reactive/helm_deploy/hmpps-template-kotlin/example/ingress.yaml
{ { - if .Values.ingress.enabled - } }
  { { - $fullName := include "app.fullname" . - } }
  { { - $ingressPath := .Values.ingress.path - } }
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: { { $fullName } }
  labels:
  { { - include "app.labels" . | nindent 4 } }
  annotations:
                                               kubernetes.io/ingress.class: "nginx"
    { { if .Values.ingress.enable_whitelist } }nginx.ingress.kubernetes.io/whitelist-source-range: { { include "app.joinListWithComma" .Values.whitelist | quote } }{ { end } }
                                               nginx.ingress.kubernetes.io/custom-http-errors: "418"
    # Secure the retry all dlqs endpoint from outside of the Kubernetes ingress
                                               nginx.ingress.kubernetes.io/configuration-snippet: |
                                                 server_tokens off;
                                                 location /hmpps-template-kotlin/queue-admin/retry-all-dlqs {
                                                   deny all;
                                                   return 401;
                                                 }
spec:
  tls:
    { { - range .Values.ingress.hosts } }
    -                        hosts:
                               - { { .host } }
      { { if .cert_secret } }secretName: { { .cert_secret } }{ { end } }
  { { - end } }
  rules:
    { { - range .Values.ingress.hosts } }
    - host: { { .host } }
      http:
        paths:
          - path: { { $ingressPath } }
            backend:
              serviceName: { { $fullName } }
              servicePort: http
  { { - end } }
  { { - end } }
